--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,17 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
+    implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 
     implementation project(':pandalib')
+
+    // CameraX core library
+    def camerax_version = "1.0.0-alpha01"
+    implementation "androidx.camera:camera-core:$camerax_version"
+    // If you want to use Camera2 extensions
+    implementation "androidx.camera:camera-camera2:$camerax_version"
 }
